<resources>
    <string name="app_name">Klinik Kita</string>
    <string name="choice_patient">Pasien</string>
    <string name="choice_clinic">Klinik</string>
    <string name="patient_login_title">Login Pasien</string>
    <string name="patient_login_register">Daftar sebagai pasien</string>
    <string name="patient_login_register_desc">Daftarkan diri Anda untuk mendapatkan pelayanan dari berbagai klinik yang tergabung dalam
        keluarga besar Klinik Kita!</string>
    <string name="clinic_login_title">Login Klinik</string>
    <string name="clinic_login_register">Daftarkan klinik Anda</string>
    <string name="clinic_login_register_desc">Daftarkanlah klinik Anda dan jadilah bagian dari jaringan Klinik Kita!</string>
    <string name="patient_register_title">Pendaftaran Pasien</string>
    <string name="key_full_name_example">Contoh: Calvin Tandra</string>
    <string name="key_nickname_example">Contoh: Calvin</string>
    <string name="patient_full_name">Nama lengkap</string>
    <string name="patient_empty_full_name">Nama lengkap pasien tidak boleh kosong!</string>
    <string name="patient_nickname">Nama panggilan</string>
    <string name="patient_empty_nickname">Nama panggilan pasien tidak boleh kosong!</string>
    <string name="patient_register_existing_phone">Nomor HP yang Anda masukkan telah terdaftar sebagai pasien!</string>
    <string name="patient_privacy_policy">Saya setuju bahwa data saya akan dipergunakan sebagai informasi pasien bagi seluruh klinik yang tergabung dalam jaringan
    Klinik Kita.</string>
    <string name="patient_privacy_policy_unchecked">Anda belum menyetujui pernyataan mengenai data Anda!</string>
    <string name="clinic_register_title">Pendaftaran Klinik</string>
    <string name="clinic_name">Nama klinik</string>
    <string name="clinic_name_example">Contoh: Klinik Sehat Abadi</string>
    <string name="clinic_empty_name">Nama klinik tidak boleh kosong!</string>
    <string name="clinic_register_existing_phone">Nomor HP yang Anda masukkan telah terdaftar sebagai klinik!</string>
    <string name="clinic_terms_of_use">Saya setuju bahwa data yang saya pergunakan merupakan data milik bersama keluarga besar jaringan Klinik Kita. Saya tidak
    akan merusak ataupun menyalahgunakan data Klinik Kita, dan bersedia bertanggung jawab bila di kemudian hari terjadi hal-hal yang tidak diinginkan dikarenakan
    kedua tindakan tersebut.</string>
    <string name="clinic_terms_of_use_unchecked">Anda belum menyetujui persyaratan penggunaan layanan Klinik Kita!</string>
    <string name="home_settings">Pengaturan</string>
    <string name="home_logout">Keluar</string>
    <string name="patient_home_greeting">Selamat datang, %s!</string>
    <string name="patient_home_register_appointment">Pendaftaran Pemeriksaan</string>
    <string name="patient_home_register_appointment_desc">Cari klinik dan dokter di sekitar Anda</string>
    <string name="patient_home_appointments_list">Lihat Pemeriksaan</string>
    <string name="patient_home_appointments_list_desc">Cek pendaftaran yang sedang diproses dan riwayat pemeriksaan sebelumnya</string>
    <string name="patient_appointments_registration_clinic_header">Pencarian Klinik</string>
    <string name="patient_appointments_registration_choose_clinic">Pilih klinik yang ingin didatangi</string>
    <string name="patient_appointments_registration_clinic_name_example">Klinik Sehat Abadi</string>
    <string name="patient_appointments_registration_clinic_address_example">Jl. DI Panjaitan no. 727, Sampit, Delta Pawan</string>
    <string name="patient_appointments_registration_clinic_city_example">Ketapang</string>
    <string name="patient_appointments_registration_clinic_phone_number_example">081234567890</string>
    <string name="patient_appointments_registration_clinic_no_clinics">Belum ada klinik yang terdaftar atau memiliki dokter.</string>
    <string name="patient_appointments_registration_doctor_header">Pencarian Dokter</string>
    <string name="patient_appointments_registration_choose_doctor">Pilih dokter yang sesuai dengan keluhan Anda</string>
    <string name="patient_appointments_registration_doctor_name_example">Tanjung Martapura</string>
    <string name="patient_appointments_registration_doctor_description_example">Spesialis penyakit dalam</string>
    <string name="patient_appointments_registration_details_header">Entri Keluhan</string>
    <string name="patient_appointments_registration_details_clinic_name">Klinik</string>
    <string name="patient_appointments_registration_details_doctor_name">Dokter</string>
    <string name="patient_appointments_registration_details_complaints">Keluhan</string>
    <string name="patient_appointments_registration_details_complaints_example">Contoh: Asam lambung naik, pusing, mual-mual</string>
    <string name="patient_appointments_registration_details_complaints_empty">Keluhan harus diisi!</string>
    <string name="patient_appointments_registration_details_button">Daftar Pemeriksaan</string>
    <string name="patient_appointments_registration_details_title">Konfirmasi</string>
    <string name="patient_appointments_registration_details_message">Apakah Anda yakin ingin mendaftarkan diri?</string>
    <string name="patient_appointments_registration_details_registered_toast">Pendaftaran sukses! Silakan cek status pendaftaran pada halaman yang bersangkutan.</string>
    <string name="patient_appointments_list_header">Lihat Pemeriksaan</string>
    <string name="patient_appointments_list_current_registrations">Cek Pendaftaran</string>
    <string name="patient_appointments_list_current_registrations_desc">Lihat pendaftaran/pemeriksaan yang sedang diproses</string>
    <string name="patient_appointments_list_history">Riwayat Pemeriksaan</string>
    <string name="patient_appointments_list_history_desc">Lihat riwayat pemeriksaan yang telah dijalani sebelumnya</string>
    <string name="patient_appointments_list_current_status">Status</string>
    <string name="patient_appointments_list_current_status_show">Hadir</string>
    <string name="patient_appointments_list_current_status_pending">Menunggu</string>
    <string name="patient_appointments_list_current_status_no_show">Tidak Hadir</string>
    <string name="patient_appointments_list_current_empty">Anda belum pernah mendaftar di klinik manapun.</string>
    <string name="patient_appointments_list_history_time">Waktu</string>
    <string name="patient_appointments_list_history_time_example">Senin, 30 Maret 2020, 18:00</string>
    <string name="patient_appointments_list_history_complaints_example">Asam lambung naik, pusing, mual-mual</string>
    <string name="patient_appointments_list_history_diagnosis">Diagnosis</string>
    <string name="patient_appointments_list_history_diagnosis_example">Refluks asam lambung</string>
    <string name="patient_appointments_list_history_treatment">Pengobatan</string>
    <string name="patient_appointments_list_history_treatment_example">Kurangi makanan pemicu gas &amp; minum obat LPZ 2 kali sehari 30 menit sebelum makan</string>
    <string name="patient_appointments_list_history_empty">Anda belum pernah berobat di klinik manapun.</string>
    <string name="clinic_home_header">Pengelolaan Klinik: %s</string>
    <string name="clinic_home_appointments_list">Lihat Pendaftaran &amp; Riwayat</string>
    <string name="clinic_home_appointments_list_desc">Cek pendaftaran dari pasien serta riwayat pemeriksaan klinik</string>
    <string name="clinic_home_manage_doctor">Pengelolaan Dokter</string>
    <string name="clinic_home_manage_doctor_desc">Lihat dan tambahkan dokter yang ada di klinik Anda</string>
    <string name="clinic_home_appointments_list_header">Pemeriksaan &amp; Riwayat</string>
    <string name="clinic_home_appointments_list_pending">Kelola Pendaftaran</string>
    <string name="clinic_home_appointments_list_pending_desc">Lihat entri pendaftaran pasien &amp; atur status kehadiran, diagnosis, dan pengobatan dari setiap
        pemeriksaan</string>
    <string name="clinic_home_appointments_list_history">Riwayat Pemeriksaan</string>
    <string name="clinic_home_appointments_list_history_desc">Lihat seluruh riwayat pemeriksaan yang dilakukan di klinik Anda</string>
    <string name="clinic_appointments_list_pending_header">Pengelolaan Pendaftaran</string>
    <string name="clinic_appointments_list_pending_patient_name">Pasien</string>
    <string name="clinic_appointments_list_pending_patient_name_example">Calvin Tandra</string>
    <string name="clinic_appointments_list_pending_show">Hadir</string>
    <string name="clinic_appointments_list_pending_no_show">Tidak Hadir</string>
    <string name="clinic_appointments_list_pending_no_show_title">Pasien Tidak Hadir</string>
    <string name="clinic_appointments_list_pending_no_show_message">Nyatakan pasien tidak hadir?</string>
    <string name="clinic_appointments_list_pending_no_show_marked_toast">Pasien telah dinyatakan tidak hadir.</string>
    <string name="clinic_appointments_list_pending_empty">Tidak ada pendaftaran yang sedang menunggu input dari Anda.</string>
    <string name="clinic_appointments_list_diagnosis_header">Diagnosis Pemeriksaan</string>
    <string name="clinic_appointments_list_diagnosis_diagnosis_example">Contoh: Refluks asam lambung</string>
    <string name="clinic_appointments_list_diagnosis_diagnosis_empty">Diagnosis harus diisi!</string>
    <string name="clinic_appointments_list_diagnosis_treatment_example">Contoh: Kurangi makanan pemicu gas &amp; minum obat LPZ 2 kali sehari 30 menit sebelum
        makan</string>
    <string name="clinic_appointments_list_diagnosis_treatment_empty">Pengobatan harus diisi!</string>
    <string name="clinic_appointments_list_diagnosis_confirmation_button">Konfirmasi</string>
    <string name="clinic_appointments_list_diagnosis_confirmation_title">Konfirmasi Diagnosis</string>
    <string name="clinic_appointments_list_diagnosis_confirmation_message">Apakah Anda yakin dengan data diagnosis yang telah Anda isi?</string>
    <string name="clinic_appointments_list_diagnosis_confirmed_toast">Konfirmasi diagnosis sukses!</string>
    <string name="clinic_appointments_list_history_header">Riwayat Pemeriksaan</string>
    <string name="clinic_appointments_list_history_empty">Belum ada rekaman kunjungan pasien ke klinik Anda.</string>
    <string name="clinic_manage_doctors_add_doctor">Penambahan Dokter</string>
    <string name="clinic_manage_doctors_edit_doctor">Pengubahan Data Dokter</string>
    <string name="clinic_manage_doctors_delete_doctor">Hapus Dokter</string>
    <string name="clinic_manage_doctors_no_doctors">Klinik Anda belum memiliki dokter!</string>
    <string name="clinic_manage_doctors_details_name">Nama</string>
    <string name="clinic_manage_doctors_details_name_example">Contoh: Tanjung Martapura</string>
    <string name="clinic_manage_doctors_details_description">Deskripsi</string>
    <string name="clinic_manage_doctors_details_description_example">Contoh: Spesialis penyakit dalam</string>
    <string name="clinic_manage_doctors_add_doctor_button">Tambahkan Dokter</string>
    <string name="clinic_manage_doctors_add_doctor_added_toast">Dokter berhasil ditambahkan!</string>
    <string name="clinic_manage_doctors_edit_doctor_button">Ubah Data Dokter</string>
    <string name="clinic_manage_doctors_edit_doctor_edited_toast">Data dokter berhasil diubah!</string>
    <string name="clinic_manage_doctors_delete_doctor_title">Hapus Dokter</string>
    <string name="key_address">Alamat</string>
    <string name="key_phone">Nomor HP</string>
    <string name="key_password">Kata sandi</string>
    <string name="key_register_button">Daftar</string>
    <string name="key_address_example">Format: Nama dan nomor jalan, kelurahan/desa, kecamatan | Contoh: Jl. Jend. Sudirman no. 999, Tengah, Delta Pawan</string>
    <string name="key_phone_example">10–12 digit | Contoh: 081234567890</string>
</resources>